Commit-5:Fixed Alignment issues.

--- a/main.css
+++ b/main.css
@@ -28,7 +28,7 @@
   display: flex !important;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: center;
 }
 .char-card {
   width: 40%;
